@@ -5,6 +5,8 @@ Revision history for DBIx::Class
           an underlying search_rs(), as by design these arguments would be
           used only on the first call to ->related_resultset(), and ignored
           afterwards. Instead an exception (detailing the fix) is thrown.
+        - Calling the set_* many-to-many helper with a list (instead of an
+          arrayref) now emits a deprecation warning
 
     * New Features
         - DBIx::Class::Optional::Dependencies now properly understands
